--- a/fatile_plot.ipynb
+++ b/fatile_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "id": "23cd9e90-6f26-49df-8de4-29ce82811653",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "from   desimodel.focalplane.geometry import xy2radec \n",
     "from   desimodel.io import load_fiberpos \n",
     "from   desitarget.geomask import circles\n",
-    "from   desitarget.sv3.sv3_targetmask import desi_mask, bgs_mask, mws_mask\n",
+    "from   desitarget.sv3.sv3_targetmask import desi_mask, bgs_mask, mws_mask, scnd_mask\n",
     "from   desimeter.fiberassign import fiberassign_flat_xy2radec, radec2tan\n",
     "from   fiberassign.hardware import xy2radec\n",
     "from   fiberassign.hardware import load_hardware\n",
@@ -65,7 +65,7 @@
      "data": {
       "text/html": [
        "<i>Table length=214</i>\n",
-       "<table id=\"table46912564707088\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table46913304297872\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>TILEID</th><th>PASS</th><th>RA</th><th>DEC</th><th>PROGRAM</th><th>IN_DESI</th><th>PRIORITY</th><th>STATUS</th><th>EBV_MED</th><th>DESIGNHA</th><th>DONEFRAC</th><th>AVAILABLE</th><th>ROSETTE</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>int32</th><th>float64</th><th>float64</th><th>str6</th><th>bool</th><th>float64</th><th>str8</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int64</th></tr></thead>\n",
        "<tr><td>12</td><td>0</td><td>150.04</td><td>2.286</td><td>BRIGHT</td><td>True</td><td>0.000e+00</td><td>done</td><td>0.022782475</td><td>0.00</td><td>1.0455</td><td>False</td><td>0</td></tr>\n",
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x2aaadad8b070>"
+       "<matplotlib.colorbar.Colorbar at 0x2aaadae28550>"
       ]
      },
      "execution_count": 6,
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "id": "4ec90cca-42d3-4382-9289-d0963a5492a1",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "array([417, 418, 419, 420, 421, 422, 423, 424, 425, 426, 427])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 13,
    "id": "34f1c180-cd3e-4bf8-9de1-02da4f4cab01",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "id": "154fc188-e5de-4ede-8dca-b6185b6fd4fd",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        " '20210529']"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 15,
    "id": "33c0c87b-6670-42f0-8093-8e9900030e14",
    "metadata": {},
    "outputs": [],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 16,
    "id": "afe1ff15-7266-4266-b38b-f413912a498b",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 17,
    "id": "fe84afac-a1b3-45da-9187-2081aeef0d52",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "1.6280324520485583"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 18,
    "id": "45e12126-93ee-45a9-9dcb-91bad8ab8662",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 19,
    "id": "fa3985aa-16d3-449f-a9c1-ccfd00075e2d",
    "metadata": {},
    "outputs": [],
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 20,
    "id": "f865dec6-ca31-4af3-b6aa-143881119257",
    "metadata": {},
    "outputs": [],
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 21,
    "id": "66d785e4-7878-48f9-85ce-01562bcc85bd",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 22,
    "id": "5318ffac-9484-4f99-9838-462d58dcd73b",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1117,7 @@
        " 'PRIORITY')"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 26,
+   "id": "642c9f60-8833-4e3c-87d0-9dd7029d8df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('RA',\n",
+       " 'DEC',\n",
+       " 'REF_EPOCH',\n",
+       " 'PARALLAX',\n",
+       " 'PMRA',\n",
+       " 'PMDEC',\n",
+       " 'TARGETID',\n",
+       " 'SV3_DESI_TARGET',\n",
+       " 'SV3_BGS_TARGET',\n",
+       " 'SV3_MWS_TARGET',\n",
+       " 'SUBPRIORITY',\n",
+       " 'OBSCONDITIONS',\n",
+       " 'PRIORITY_INIT',\n",
+       " 'NUMOBS_INIT',\n",
+       " 'SV3_SCND_TARGET',\n",
+       " 'NUMOBS_MORE',\n",
+       " 'NUMOBS',\n",
+       " 'Z',\n",
+       " 'ZWARN',\n",
+       " 'ZTILEID',\n",
+       " 'TARGET_STATE',\n",
+       " 'TIMESTAMP',\n",
+       " 'VERSION',\n",
+       " 'PRIORITY')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ledger.dtype.names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1f8b0f12-81fa-4f0c-9af2-0f4d92c352d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LRG',\n",
+       " 'ELG',\n",
+       " 'QSO',\n",
+       " 'LRG_LOWDENS',\n",
+       " 'QSO_HIZ',\n",
+       " 'ELG_LOP',\n",
+       " 'ELG_HIP',\n",
+       " 'LRG_NORTH',\n",
+       " 'ELG_NORTH',\n",
+       " 'QSO_NORTH',\n",
+       " 'ELG_LOP_NORTH',\n",
+       " 'ELG_HIP_NORTH',\n",
+       " 'LRG_LOWDENS_NORTH',\n",
+       " 'LRG_SOUTH',\n",
+       " 'ELG_SOUTH',\n",
+       " 'QSO_SOUTH',\n",
+       " 'ELG_LOP_SOUTH',\n",
+       " 'ELG_HIP_SOUTH',\n",
+       " 'LRG_LOWDENS_SOUTH',\n",
+       " 'SKY',\n",
+       " 'STD_FAINT',\n",
+       " 'STD_WD',\n",
+       " 'STD_BRIGHT',\n",
+       " 'BAD_SKY',\n",
+       " 'SUPP_SKY',\n",
+       " 'NO_TARGET',\n",
+       " 'BRIGHT_OBJECT',\n",
+       " 'IN_BRIGHT_OBJECT',\n",
+       " 'NEAR_BRIGHT_OBJECT',\n",
+       " 'BGS_ANY',\n",
+       " 'MWS_ANY',\n",
+       " 'SCND_ANY']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desi_mask.names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "0147a99b-0181-4d7e-8c93-fbb4051f099f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['VETO',\n",
+       " 'UDG',\n",
+       " 'FIRST_MALS',\n",
+       " 'QSO_RED',\n",
+       " 'MWS_CLUS_GAL_DEEP',\n",
+       " 'LOW_MASS_AGN',\n",
+       " 'FAINT_HPM',\n",
+       " 'LOW_Z_TIER1',\n",
+       " 'LOW_Z_TIER2',\n",
+       " 'LOW_Z_TIER3',\n",
+       " 'BHB',\n",
+       " 'SPCV',\n",
+       " 'DC3R2_GAMA',\n",
+       " 'PSF_OUT_BRIGHT',\n",
+       " 'PSF_OUT_DARK',\n",
+       " 'HPM_SOUM',\n",
+       " 'SN_HOSTS',\n",
+       " 'GAL_CLUS_BCG',\n",
+       " 'GAL_CLUS_2ND',\n",
+       " 'GAL_CLUS_SAT',\n",
+       " 'STRONG_LENS',\n",
+       " 'WISE_VAR_QSO',\n",
+       " 'Z5_QSO',\n",
+       " 'MWS_MAIN_CLUSTER_SV',\n",
+       " 'BRIGHT_HPM',\n",
+       " 'WD_BINARIES_BRIGHT',\n",
+       " 'WD_BINARIES_DARK',\n",
+       " 'PV_BRIGHT_HIGH',\n",
+       " 'PV_BRIGHT_MEDIUM',\n",
+       " 'PV_BRIGHT_LOW',\n",
+       " 'PV_DARK_HIGH',\n",
+       " 'PV_DARK_MEDIUM',\n",
+       " 'PV_DARK_LOW',\n",
+       " 'BRIGHT_TOO_LOP',\n",
+       " 'BRIGHT_TOO_HIP',\n",
+       " 'DARK_TOO_LOP',\n",
+       " 'DARK_TOO_HIP']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scnd_mask.names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1944f1b0-87d9-486d-8a9b-9bc3676ea73c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('RA',\n",
+       " 'DEC',\n",
+       " 'REF_EPOCH',\n",
+       " 'PARALLAX',\n",
+       " 'PMRA',\n",
+       " 'PMDEC',\n",
+       " 'TARGETID',\n",
+       " 'SV3_DESI_TARGET',\n",
+       " 'SV3_BGS_TARGET',\n",
+       " 'SV3_MWS_TARGET',\n",
+       " 'SUBPRIORITY',\n",
+       " 'OBSCONDITIONS',\n",
+       " 'PRIORITY_INIT',\n",
+       " 'NUMOBS_INIT',\n",
+       " 'SV3_SCND_TARGET',\n",
+       " 'NUMOBS_MORE',\n",
+       " 'NUMOBS',\n",
+       " 'Z',\n",
+       " 'ZWARN',\n",
+       " 'ZTILEID',\n",
+       " 'TARGET_STATE',\n",
+       " 'TIMESTAMP',\n",
+       " 'VERSION',\n",
+       " 'PRIORITY')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ledger.dtype.names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "caabfc45-90ea-498e-9477-9f4f84716a84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<i>Table length=3</i>\n",
+       "<table id=\"table46913417473184\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>RA</th><th>DEC</th><th>REF_EPOCH</th><th>PARALLAX</th><th>PMRA</th><th>PMDEC</th><th>TARGETID</th><th>SV3_DESI_TARGET</th><th>SV3_BGS_TARGET</th><th>SV3_MWS_TARGET</th><th>SUBPRIORITY</th><th>OBSCONDITIONS</th><th>PRIORITY_INIT</th><th>NUMOBS_INIT</th><th>SV3_SCND_TARGET</th><th>NUMOBS_MORE</th><th>NUMOBS</th><th>Z</th><th>ZWARN</th><th>ZTILEID</th><th>TARGET_STATE</th><th>TIMESTAMP</th><th>VERSION</th><th>PRIORITY</th></tr></thead>\n",
+       "<thead><tr><th>deg</th><th>deg</th><th>yr</th><th>mas</th><th>mas / yr</th><th>mas / yr</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>s</th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>int32</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>int64</th><th>int32</th><th>str30</th><th>str19</th><th>str6</th><th>int64</th></tr></thead>\n",
+       "<tr><td>207.71349585787186</td><td>4.095958407215915</td><td>2015.5</td><td>0.37474668</td><td>-2.2474825</td><td>-4.027906</td><td>39627884817552081</td><td>4611686061377060864</td><td>0</td><td>0</td><td>0.45502144692493907</td><td>63</td><td>1998</td><td>1</td><td>2199023255552</td><td>1</td><td>0</td><td>-1.0</td><td>-1</td><td>-1</td><td>SCND|UNOBS</td><td>2021-04-04T23:14:15</td><td>0.57.0</td><td>1998</td></tr>\n",
+       "<tr><td>218.68818505702177</td><td>34.377367678517096</td><td>2015.5</td><td>0.23563902</td><td>2.0083709</td><td>-21.928774</td><td>39632971430366591</td><td>4611686061377060864</td><td>0</td><td>0</td><td>0.8153711478129937</td><td>63</td><td>1998</td><td>1</td><td>2199123918848</td><td>1</td><td>0</td><td>-1.0</td><td>-1</td><td>-1</td><td>SCND|UNOBS</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>1998</td></tr>\n",
+       "<tr><td>213.59868744742795</td><td>-1.6643082026605303</td><td>2015.5</td><td>0.50522244</td><td>-43.182053</td><td>-3.4812536</td><td>39627746032224323</td><td>4611686061377060864</td><td>0</td><td>0</td><td>0.9188288041803259</td><td>63</td><td>1998</td><td>1</td><td>2199023255552</td><td>1</td><td>0</td><td>-1.0</td><td>-1</td><td>-1</td><td>SCND|UNOBS</td><td>2021-04-04T23:14:10</td><td>0.57.0</td><td>1998</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=3>\n",
+       "        RA                 DEC         REF_EPOCH ... VERSION PRIORITY\n",
+       "       deg                 deg             yr    ...                 \n",
+       "     float64             float64        float32  ...   str6   int64  \n",
+       "------------------ ------------------- --------- ... ------- --------\n",
+       "207.71349585787186   4.095958407215915    2015.5 ...  0.57.0     1998\n",
+       "218.68818505702177  34.377367678517096    2015.5 ...  0.57.0     1998\n",
+       "213.59868744742795 -1.6643082026605303    2015.5 ...  0.57.0     1998"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scnd_notsv3  =  (ledger['SV3_SCND_TARGET'].data > 0)\n",
+    "scnd_notsv3 &= ((ledger['SV3_DESI_TARGET'].data & desi_mask['BGS_ANY']) == 0)\n",
+    "scnd_notsv3 &= ((ledger['SV3_DESI_TARGET'].data & desi_mask['MWS_ANY']) == 0)\n",
+    "\n",
+    "scnd_notsv3  = ledger[scnd_notsv3]\n",
+    "scnd_notsv3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "0cb6e08a-71b8-4d33-86f2-7b78a497b47b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STD_FAINT      \t[ True  True  True]\n",
+      "STD_WD         \t[False False False]\n",
+      "STD_BRIGHT     \t[ True  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in ['STD_FAINT', 'STD_WD', 'STD_BRIGHT']:\n",
+    "    y = (scnd_notsv3['SV3_DESI_TARGET'].data & desi_mask[x]) != 0\n",
+    "    \n",
+    "    print('{}\\t{}'.format(x.ljust(15), y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "aaf2cef0-c862-4bf2-934a-671445c7e506",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 24,
    "id": "758bccb3-c949-4190-849c-660affe16432",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 25,
    "id": "a16c810c-7e67-475d-ac40-303f55a2939f",
    "metadata": {},
    "outputs": [
