--- a/mxxl_ledger.ipynb
+++ b/mxxl_ledger.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6142b2fa-0fdd-4628-8ae7-61e7a351bc80",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
      "data": {
       "text/html": [
        "<i>Table length=12003</i>\n",
-       "<table id=\"table46913474713056\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table46913467891472\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>MOCKRA</th><th>MOCKDEC</th><th>Z</th><th>ZOBS</th><th>MRH</th><th>RMAG_DRED</th><th>REFGMR0P1</th><th>GTYPE</th><th>HMASS</th><th>NMOCK</th><th>HALOID</th><th>RA</th><th>DEC</th><th>TILEID</th><th>ROSETTE</th><th>TARGETID</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>151.7946319580078</td><td>32.587886810302734</td><td>0.22676359117031097</td><td>0.22690549492835999</td><td>-19.50278091430664</td><td>19.908157348632812</td><td>0.4337816536426544</td><td>0.0</td><td>29.984575271606445</td><td>4</td><td>518510780</td><td>218.25636456601126</td><td>32.81813503005441</td><td>211</td><td>7</td><td>2786045</td></tr>\n",
@@ -224,7 +224,7 @@
        "196.80531311035156  32.55430603027344  0.08299045264720917 ...       7  5560111"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,11 +335,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "44e67b2f-7723-4413-ab3d-d086550dfa92",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#GET RID OF TARGETIDS!!!!!!!!!!!!!!!!! \n",
+    "\n",
     "#Working through a list of healpix, create a big for loop at some point \n",
     "\n",
     "#total mock catalog \n",
@@ -390,7 +392,7 @@
     "               row['BGS_TARGET'],\\\n",
     "               0,\\\n",
     "               0,\\\n",
-    "               prev_maxtid + i,\\\n",
+    "               prev_maxtid,\\\n",
     "               row['SUBPRIORITY'],\\\n",
     "               516,\\\n",
     "               row['PRIORITY_INIT'],\\\n",
@@ -414,48 +416,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fe8b94f1-8eff-4688-bdf6-3f0f7086fe3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<i>Table length=12003</i>\n",
+       "<table id=\"table46913475096976\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>RA</th><th>DEC</th><th>PARALLAX</th><th>PMRA</th><th>PMDEC</th><th>REF_EPOCH</th><th>DESI_TARGET</th><th>BGS_TARGET</th><th>MWS_TARGET</th><th>SCND_TARGET</th><th>TARGETID</th><th>SUBPRIORITY</th><th>OBSCONDITIONS</th><th>PRIORITY_INIT</th><th>NUMOBS_INIT</th><th>PRIORITY</th><th>NUMOBS</th><th>NUMOBS_MORE</th><th>Z</th><th>ZWARN</th><th>TIMESTAMP</th><th>VERSION</th><th>TARGET_STATE</th><th>ZTILEID</th></tr></thead>\n",
+       "<thead><tr><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>int32</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>int64</th><th>str25</th><th>str14</th><th>str30</th><th>int32</th></tr></thead>\n",
+       "<tr><td>218.25636456601126</td><td>32.81813503005441</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>257</td><td>0</td><td>0</td><td>0</td><td>0.08747322159653415</td><td>516</td><td>102000</td><td>9</td><td>102000</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.7341398481513</td><td>33.35300965858068</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>1</td><td>0.7824831799983651</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>218.01461645885885</td><td>33.00530329995791</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>257</td><td>0</td><td>0</td><td>2</td><td>0.9748915840819536</td><td>516</td><td>102000</td><td>9</td><td>102000</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.9704740595073</td><td>32.828278153387444</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>3</td><td>0.5790901613299834</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>218.5161234058684</td><td>33.62560878645456</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>4</td><td>0.5929027752950237</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>218.0167053419407</td><td>33.2861591244983</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>5</td><td>0.7382494734599402</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>218.3227086368473</td><td>32.90880158153905</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>6</td><td>0.9070584630617765</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>218.10916444689556</td><td>34.083816462583</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>7</td><td>0.14049537544826696</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.51335130976537</td><td>33.29139027066707</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>8</td><td>0.10623852965850844</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.81544947101287</td><td>32.99562882905281</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>257</td><td>0</td><td>0</td><td>9</td><td>0.385190305644337</td><td>516</td><td>102000</td><td>9</td><td>102000</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>217.64098496411412</td><td>33.44714483061912</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>257</td><td>0</td><td>0</td><td>11993</td><td>0.21691136512209164</td><td>516</td><td>102000</td><td>9</td><td>102000</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.78150541322458</td><td>33.35421332512703</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>11994</td><td>0.25320527315220454</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.6412193495667</td><td>33.392783176781606</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>11995</td><td>0.048642881976469154</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.39889819166422</td><td>33.29705377913505</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>11996</td><td>0.42510828469519313</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.68010921231703</td><td>33.45187773990295</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>11997</td><td>0.10033112386791077</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.61435827856366</td><td>33.4607766321223</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>11998</td><td>0.44227258026615446</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.68306730956633</td><td>33.46036539516771</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>11999</td><td>0.061919606259580706</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>217.42580742031285</td><td>33.366254197688086</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>514</td><td>0</td><td>0</td><td>12000</td><td>0.9069617368976914</td><td>516</td><td>102100</td><td>9</td><td>102100</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>218.48564403153648</td><td>33.44378897825194</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>257</td><td>0</td><td>0</td><td>12001</td><td>0.6201199059544401</td><td>516</td><td>102000</td><td>9</td><td>102000</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "<tr><td>218.28519375644493</td><td>32.79320442194553</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>1152921504606846976</td><td>257</td><td>0</td><td>0</td><td>12002</td><td>0.2274693633298316</td><td>516</td><td>102000</td><td>9</td><td>102000</td><td>0</td><td>9</td><td>-1.0</td><td>-1</td><td>2021-04-04T23:05:09</td><td>0.57.0</td><td>BGS|UNOBS</td><td>-1</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=12003>\n",
+       "        RA                DEC         PARALLAX ... VERSION TARGET_STATE ZTILEID\n",
+       "     float64            float64       float32  ...  str14     str30      int32 \n",
+       "------------------ ------------------ -------- ... ------- ------------ -------\n",
+       "218.25636456601126  32.81813503005441      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       " 217.7341398481513  33.35300965858068      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "218.01461645885885  33.00530329995791      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       " 217.9704740595073 32.828278153387444      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       " 218.5161234058684  33.62560878645456      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       " 218.0167053419407   33.2861591244983      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       " 218.3227086368473  32.90880158153905      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "218.10916444689556    34.083816462583      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.51335130976537  33.29139027066707      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.81544947101287  32.99562882905281      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "               ...                ...      ... ...     ...          ...     ...\n",
+       "217.64098496411412  33.44714483061912      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.78150541322458  33.35421332512703      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       " 217.6412193495667 33.392783176781606      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.39889819166422  33.29705377913505      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.68010921231703  33.45187773990295      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.61435827856366   33.4607766321223      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.68306730956633  33.46036539516771      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "217.42580742031285 33.366254197688086      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "218.48564403153648  33.44378897825194      0.0 ...  0.57.0    BGS|UNOBS      -1\n",
+       "218.28519375644493  32.79320442194553      0.0 ...  0.57.0    BGS|UNOBS      -1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c96d6af4-266a-47fa-aa84-b47b22189eb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1988.2790838719404\n",
+      "1265.9454841132203\n",
+      "321.10334867624744\n"
+     ]
+    }
+   ],
    "source": [
     "#seperate bright and faint so can make two different mock catalogs: is it safe to split by priority?\n",
     "bright_single_pixel_mxxl = single_pixel_mxxl[((single_pixel_mxxl['PRIORITY_INIT']==102100)&(single_pixel_mxxl['BGS_TARGET']==514))]\n",
     "faint_single_pixel_mxxl = single_pixel_mxxl[((single_pixel_mxxl['PRIORITY_INIT']==102000)&(single_pixel_mxxl['BGS_TARGET']==257))]\n",
     "hip_single_pixel_mxxl = single_pixel_mxxl[((single_pixel_mxxl['PRIORITY_INIT']==102100)&(single_pixel_mxxl['BGS_TARGET']==265))]\n",
     "\n",
-    "print(len(bright_single_pixel_mxxl))\n",
-    "print(len(faint_single_pixel_mxxl))\n",
-    "print(len(hip_single_pixel_mxxl))"
+    "print(len(bright_single_pixel_mxxl)/pixel_area)\n",
+    "print(len(faint_single_pixel_mxxl)/pixel_area)\n",
+    "print(len(hip_single_pixel_mxxl)/pixel_area)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "66c26ef2-c800-4234-b1be-071047cbf3c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21053070065816878\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(draws[draws>0.8])/len(draws))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1479172-553f-455c-920c-ee3e418a67d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
