--- a/bgs_map.ipynb
+++ b/bgs_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "b478cecd-4a3d-4247-bbf8-4862a8765887",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "4e338d02-a02c-4098-a938-d17e1f9c1b29",
    "metadata": {},
    "outputs": [
@@ -223,135 +223,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime of 0.038625 seconds after 0 pixels\n",
-      "Runtime of 3.631031 seconds after 100 pixels\n",
-      "Runtime of 9.988091 seconds after 200 pixels\n",
-      "Runtime of 15.531003 seconds after 300 pixels\n",
-      "Runtime of 23.701752 seconds after 400 pixels\n",
-      "Runtime of 30.849328 seconds after 500 pixels\n",
-      "Runtime of 37.098508 seconds after 600 pixels\n",
-      "Runtime of 43.744839 seconds after 700 pixels\n",
-      "Runtime of 50.968780 seconds after 800 pixels\n",
-      "Runtime of 56.067711 seconds after 900 pixels\n",
-      "Runtime of 60.905777 seconds after 1000 pixels\n",
-      "Runtime of 65.853304 seconds after 1100 pixels\n",
-      "Runtime of 73.962280 seconds after 1200 pixels\n",
-      "Runtime of 82.274590 seconds after 1300 pixels\n",
-      "Runtime of 91.258531 seconds after 1400 pixels\n",
-      "Runtime of 97.054779 seconds after 1500 pixels\n",
-      "Runtime of 103.414422 seconds after 1600 pixels\n",
-      "Runtime of 109.528318 seconds after 1700 pixels\n",
-      "Runtime of 115.891794 seconds after 1800 pixels\n",
-      "Runtime of 121.623485 seconds after 1900 pixels\n",
-      "Runtime of 128.689717 seconds after 2000 pixels\n",
-      "Runtime of 135.593804 seconds after 2100 pixels\n",
-      "Runtime of 141.923414 seconds after 2200 pixels\n",
-      "Runtime of 147.514389 seconds after 2300 pixels\n",
-      "Runtime of 152.647985 seconds after 2400 pixels\n",
-      "Runtime of 158.130984 seconds after 2500 pixels\n",
-      "Runtime of 164.045771 seconds after 2600 pixels\n",
-      "Runtime of 170.536549 seconds after 2700 pixels\n",
-      "Runtime of 179.757751 seconds after 2800 pixels\n",
-      "Runtime of 188.150491 seconds after 2900 pixels\n",
-      "Runtime of 197.405349 seconds after 3000 pixels\n",
-      "Runtime of 203.179015 seconds after 3100 pixels\n",
-      "Runtime of 207.107985 seconds after 3200 pixels\n",
-      "Runtime of 211.991089 seconds after 3300 pixels\n",
-      "Runtime of 217.429232 seconds after 3400 pixels\n",
-      "Runtime of 222.392827 seconds after 3500 pixels\n",
-      "Runtime of 228.194419 seconds after 3600 pixels\n",
-      "Runtime of 235.509165 seconds after 3700 pixels\n",
-      "Runtime of 241.527486 seconds after 3800 pixels\n",
-      "Runtime of 247.089872 seconds after 3900 pixels\n",
-      "Runtime of 253.313405 seconds after 4000 pixels\n",
-      "Runtime of 259.827277 seconds after 4100 pixels\n",
-      "Runtime of 266.320231 seconds after 4200 pixels\n",
-      "Runtime of 271.959121 seconds after 4300 pixels\n",
-      "Runtime of 276.078855 seconds after 4400 pixels\n",
-      "Runtime of 282.067235 seconds after 4500 pixels\n",
-      "Runtime of 287.824017 seconds after 4600 pixels\n",
-      "Runtime of 292.912013 seconds after 4700 pixels\n",
-      "Runtime of 298.110869 seconds after 4800 pixels\n",
-      "Runtime of 303.378582 seconds after 4900 pixels\n",
-      "Runtime of 308.476559 seconds after 5000 pixels\n",
-      "Runtime of 313.319567 seconds after 5100 pixels\n",
-      "Runtime of 319.947419 seconds after 5200 pixels\n",
-      "Runtime of 328.439845 seconds after 5300 pixels\n",
-      "Runtime of 338.417708 seconds after 5400 pixels\n",
-      "Runtime of 347.479664 seconds after 5500 pixels\n",
-      "Runtime of 352.704384 seconds after 5600 pixels\n",
-      "Runtime of 359.226481 seconds after 5700 pixels\n",
-      "Runtime of 364.877734 seconds after 5800 pixels\n",
-      "Runtime of 370.537688 seconds after 5900 pixels\n",
-      "Runtime of 375.618594 seconds after 6000 pixels\n",
-      "Runtime of 380.417925 seconds after 6100 pixels\n",
-      "Runtime of 385.310364 seconds after 6200 pixels\n",
-      "Runtime of 390.340948 seconds after 6300 pixels\n",
-      "Runtime of 394.859369 seconds after 6400 pixels\n",
+      "Runtime of 0.027649 seconds after 0 pixels\n",
+      "Runtime of 4.789749 seconds after 100 pixels\n",
+      "Runtime of 11.043039 seconds after 200 pixels\n",
+      "Runtime of 16.369088 seconds after 300 pixels\n",
+      "Runtime of 23.119875 seconds after 400 pixels\n",
+      "Runtime of 29.059783 seconds after 500 pixels\n",
+      "Runtime of 34.289546 seconds after 600 pixels\n",
+      "Runtime of 39.861397 seconds after 700 pixels\n",
+      "Runtime of 46.766131 seconds after 800 pixels\n",
+      "Runtime of 51.888052 seconds after 900 pixels\n",
+      "Runtime of 56.732947 seconds after 1000 pixels\n",
+      "Runtime of 61.660549 seconds after 1100 pixels\n",
+      "Runtime of 68.348413 seconds after 1200 pixels\n",
+      "Runtime of 75.438792 seconds after 1300 pixels\n",
+      "Runtime of 82.919789 seconds after 1400 pixels\n",
+      "Runtime of 88.306706 seconds after 1500 pixels\n",
+      "Runtime of 94.165837 seconds after 1600 pixels\n",
+      "Runtime of 100.168729 seconds after 1700 pixels\n",
+      "Runtime of 106.203335 seconds after 1800 pixels\n",
+      "Runtime of 111.399368 seconds after 1900 pixels\n",
+      "Runtime of 117.943293 seconds after 2000 pixels\n",
+      "Runtime of 124.108143 seconds after 2100 pixels\n",
+      "Runtime of 130.073871 seconds after 2200 pixels\n",
+      "Runtime of 135.012328 seconds after 2300 pixels\n",
+      "Runtime of 139.913456 seconds after 2400 pixels\n",
+      "Runtime of 144.917487 seconds after 2500 pixels\n",
+      "Runtime of 150.189815 seconds after 2600 pixels\n",
+      "Runtime of 156.367814 seconds after 2700 pixels\n",
+      "Runtime of 165.266999 seconds after 2800 pixels\n",
+      "Runtime of 172.639074 seconds after 2900 pixels\n",
+      "Runtime of 181.208832 seconds after 3000 pixels\n",
+      "Runtime of 186.723624 seconds after 3100 pixels\n",
+      "Runtime of 190.851182 seconds after 3200 pixels\n",
+      "Runtime of 196.271815 seconds after 3300 pixels\n",
+      "Runtime of 202.204084 seconds after 3400 pixels\n",
+      "Runtime of 207.501600 seconds after 3500 pixels\n",
+      "Runtime of 213.553220 seconds after 3600 pixels\n",
+      "Runtime of 220.971865 seconds after 3700 pixels\n",
+      "Runtime of 227.419131 seconds after 3800 pixels\n",
+      "Runtime of 233.295977 seconds after 3900 pixels\n",
+      "Runtime of 239.670133 seconds after 4000 pixels\n",
+      "Runtime of 245.938958 seconds after 4100 pixels\n",
+      "Runtime of 252.577041 seconds after 4200 pixels\n",
+      "Runtime of 258.379386 seconds after 4300 pixels\n",
+      "Runtime of 262.761209 seconds after 4400 pixels\n",
+      "Runtime of 268.555357 seconds after 4500 pixels\n",
+      "Runtime of 274.008118 seconds after 4600 pixels\n",
+      "Runtime of 279.135420 seconds after 4700 pixels\n",
+      "Runtime of 284.784392 seconds after 4800 pixels\n",
+      "Runtime of 290.278650 seconds after 4900 pixels\n",
+      "Runtime of 295.241632 seconds after 5000 pixels\n",
+      "Runtime of 300.124545 seconds after 5100 pixels\n",
+      "Runtime of 306.246411 seconds after 5200 pixels\n",
+      "Runtime of 313.911119 seconds after 5300 pixels\n",
+      "Runtime of 322.969597 seconds after 5400 pixels\n",
+      "Runtime of 331.011826 seconds after 5500 pixels\n",
+      "Runtime of 336.184314 seconds after 5600 pixels\n",
+      "Runtime of 342.374480 seconds after 5700 pixels\n",
+      "Runtime of 347.863057 seconds after 5800 pixels\n",
+      "Runtime of 353.346093 seconds after 5900 pixels\n",
+      "Runtime of 358.150736 seconds after 6000 pixels\n",
+      "Runtime of 362.959225 seconds after 6100 pixels\n",
+      "Runtime of 367.814429 seconds after 6200 pixels\n",
+      "Runtime of 372.763307 seconds after 6300 pixels\n",
+      "Runtime of 377.463350 seconds after 6400 pixels\n",
       "\n",
       "\n",
-      "Total runtime of 411.516036 seconds after 14000 pixels\n"
+      "Total runtime of 387.447353 seconds after 14000 pixels\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<i>Table length=16938694</i>\n",
-       "<table id=\"table46913412672288\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>RA</th><th>DEC</th><th>TARGETID</th><th>BGS_TARGET</th><th>MWS_TARGET</th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
-       "<tr><td>59.60086559409994</td><td>-68.12683131313392</td><td>39626498281308189</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.00983139575825</td><td>-68.16966639837612</td><td>39626498281308607</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.01124019929327</td><td>-68.16379040745758</td><td>39626498281308610</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.067316634746724</td><td>-68.1403940503445</td><td>39626498281308675</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.27687723658043</td><td>-68.1477166136955</td><td>39626498285502547</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.351730827700045</td><td>-68.1384524183673</td><td>39626498285502613</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.35480903565853</td><td>-68.15736062454609</td><td>39626498285502619</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.41502834204189</td><td>-68.14758441322456</td><td>39626498285502711</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.57191230896668</td><td>-68.15293728255374</td><td>39626498285502939</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>60.69114254438406</td><td>-68.12953112115999</td><td>39626498285503141</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>353.90229538577836</td><td>34.19043634623619</td><td>39637366360509482</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.91138859516565</td><td>34.189754930577195</td><td>39637366360509605</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9140417859083</td><td>34.19516748483782</td><td>39637366360509636</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9156729717108</td><td>34.190661935823925</td><td>39637366360509656</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9321728308656</td><td>34.139600042547336</td><td>39637366360509838</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.9425404968417</td><td>34.32039745519458</td><td>39637366360509977</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.94967431338137</td><td>34.33088940446574</td><td>39637366360510070</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.95134213072873</td><td>34.1574064921124</td><td>39637366360510096</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.95491984415384</td><td>34.16769884679844</td><td>39637366360510151</td><td>131074</td><td>0</td></tr>\n",
-       "<tr><td>353.95951121176887</td><td>34.159867219725534</td><td>39637366360510211</td><td>131074</td><td>0</td></tr>\n",
+       "<table id=\"table46913375124880\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>RA</th><th>DEC</th><th>TARGETID</th><th>BGS_TARGET</th><th>MWS_TARGET</th><th>Z</th></tr></thead>\n",
+       "<thead><tr><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>59.60086559409994</td><td>-68.12683131313392</td><td>39626498281308189</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.00983139575825</td><td>-68.16966639837612</td><td>39626498281308607</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.01124019929327</td><td>-68.16379040745758</td><td>39626498281308610</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.067316634746724</td><td>-68.1403940503445</td><td>39626498281308675</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.27687723658043</td><td>-68.1477166136955</td><td>39626498285502547</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.351730827700045</td><td>-68.1384524183673</td><td>39626498285502613</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.35480903565853</td><td>-68.15736062454609</td><td>39626498285502619</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.41502834204189</td><td>-68.14758441322456</td><td>39626498285502711</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.57191230896668</td><td>-68.15293728255374</td><td>39626498285502939</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>60.69114254438406</td><td>-68.12953112115999</td><td>39626498285503141</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>353.90229538577836</td><td>34.19043634623619</td><td>39637366360509482</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.91138859516565</td><td>34.189754930577195</td><td>39637366360509605</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.9140417859083</td><td>34.19516748483782</td><td>39637366360509636</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.9156729717108</td><td>34.190661935823925</td><td>39637366360509656</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.9321728308656</td><td>34.139600042547336</td><td>39637366360509838</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.9425404968417</td><td>34.32039745519458</td><td>39637366360509977</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.94967431338137</td><td>34.33088940446574</td><td>39637366360510070</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.95134213072873</td><td>34.1574064921124</td><td>39637366360510096</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.95491984415384</td><td>34.16769884679844</td><td>39637366360510151</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
+       "<tr><td>353.95951121176887</td><td>34.159867219725534</td><td>39637366360510211</td><td>131074</td><td>0</td><td>-1.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=16938694>\n",
-       "        RA                DEC              TARGETID     BGS_TARGET MWS_TARGET\n",
-       "     float64            float64             int64         int64      int64   \n",
-       "------------------ ------------------ ----------------- ---------- ----------\n",
-       " 59.60086559409994 -68.12683131313392 39626498281308189     131074          0\n",
-       " 60.00983139575825 -68.16966639837612 39626498281308607     131074          0\n",
-       " 60.01124019929327 -68.16379040745758 39626498281308610     131074          0\n",
-       "60.067316634746724  -68.1403940503445 39626498281308675     131074          0\n",
-       " 60.27687723658043  -68.1477166136955 39626498285502547     131074          0\n",
-       "60.351730827700045  -68.1384524183673 39626498285502613     131074          0\n",
-       " 60.35480903565853 -68.15736062454609 39626498285502619     131074          0\n",
-       " 60.41502834204189 -68.14758441322456 39626498285502711     131074          0\n",
-       " 60.57191230896668 -68.15293728255374 39626498285502939     131074          0\n",
-       " 60.69114254438406 -68.12953112115999 39626498285503141     131074          0\n",
-       "               ...                ...               ...        ...        ...\n",
-       "353.90229538577836  34.19043634623619 39637366360509482     131074          0\n",
-       "353.91138859516565 34.189754930577195 39637366360509605     131074          0\n",
-       " 353.9140417859083  34.19516748483782 39637366360509636     131074          0\n",
-       " 353.9156729717108 34.190661935823925 39637366360509656     131074          0\n",
-       " 353.9321728308656 34.139600042547336 39637366360509838     131074          0\n",
-       " 353.9425404968417  34.32039745519458 39637366360509977     131074          0\n",
-       "353.94967431338137  34.33088940446574 39637366360510070     131074          0\n",
-       "353.95134213072873   34.1574064921124 39637366360510096     131074          0\n",
-       "353.95491984415384  34.16769884679844 39637366360510151     131074          0\n",
-       "353.95951121176887 34.159867219725534 39637366360510211     131074          0"
+       "        RA                DEC              TARGETID     ... MWS_TARGET    Z   \n",
+       "     float64            float64             int64       ...   int64    float64\n",
+       "------------------ ------------------ ----------------- ... ---------- -------\n",
+       " 59.60086559409994 -68.12683131313392 39626498281308189 ...          0    -1.0\n",
+       " 60.00983139575825 -68.16966639837612 39626498281308607 ...          0    -1.0\n",
+       " 60.01124019929327 -68.16379040745758 39626498281308610 ...          0    -1.0\n",
+       "60.067316634746724  -68.1403940503445 39626498281308675 ...          0    -1.0\n",
+       " 60.27687723658043  -68.1477166136955 39626498285502547 ...          0    -1.0\n",
+       "60.351730827700045  -68.1384524183673 39626498285502613 ...          0    -1.0\n",
+       " 60.35480903565853 -68.15736062454609 39626498285502619 ...          0    -1.0\n",
+       " 60.41502834204189 -68.14758441322456 39626498285502711 ...          0    -1.0\n",
+       " 60.57191230896668 -68.15293728255374 39626498285502939 ...          0    -1.0\n",
+       " 60.69114254438406 -68.12953112115999 39626498285503141 ...          0    -1.0\n",
+       "               ...                ...               ... ...        ...     ...\n",
+       "353.90229538577836  34.19043634623619 39637366360509482 ...          0    -1.0\n",
+       "353.91138859516565 34.189754930577195 39637366360509605 ...          0    -1.0\n",
+       " 353.9140417859083  34.19516748483782 39637366360509636 ...          0    -1.0\n",
+       " 353.9156729717108 34.190661935823925 39637366360509656 ...          0    -1.0\n",
+       " 353.9321728308656 34.139600042547336 39637366360509838 ...          0    -1.0\n",
+       " 353.9425404968417  34.32039745519458 39637366360509977 ...          0    -1.0\n",
+       "353.94967431338137  34.33088940446574 39637366360510070 ...          0    -1.0\n",
+       "353.95134213072873   34.1574064921124 39637366360510096 ...          0    -1.0\n",
+       "353.95491984415384  34.16769884679844 39637366360510151 ...          0    -1.0\n",
+       "353.95951121176887 34.159867219725534 39637366360510211 ...          0    -1.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
     "ttype = 'BGS_BRIGHT'\n",
     "\n",
     "for i, x in enumerate(to_grab):\n",
-    "    x = pd.read_csv(x, comment='#', delimiter='\\s+', usecols=['RA', 'DEC', 'TARGETID', 'BGS_TARGET', 'MWS_TARGET'])\n",
+    "    x = pd.read_csv(x, comment='#', delimiter='\\s+', usecols=['RA', 'DEC', 'TARGETID', 'BGS_TARGET', 'MWS_TARGET','Z'])\n",
     "\n",
     "    is_main_blue = (x[mmask] & bgs_mask[ttype]) != 0\n",
     "\n",
