--- a/mock_target_files.ipynb
+++ b/mock_target_files.ipynb
@@ -311,8 +311,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "36c6b774-89e2-4f57-b88b-bd736e0d3888",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4d60c369db80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m zcatdatamodel = np.array([], dtype=[\n\u001b[0m\u001b[1;32m      2\u001b[0m                                        \u001b[0;34m(\u001b[0m\u001b[0;34m'RA'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'>f8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                        \u001b[0;34m(\u001b[0m\u001b[0;34m'DEC'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'>f8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                        \u001b[0;34m(\u001b[0m\u001b[0;34m'TARGETID'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'>i8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                        \u001b[0;34m(\u001b[0m\u001b[0;34m'NUMOBS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'>i4'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "zcatdatamodel = np.array([], dtype=[\n",
+    "                                       ('RA', '>f8'),\\\n",
+    "                                       ('DEC', '>f8'),\\\n",
+    "                                       ('TARGETID', '>i8'),\n",
+    "                                       ('NUMOBS', '>i4'),\\\n",
+    "                                       ('Z', '>f8'),\\\n",
+    "                                       ('ZWARN', '>i8'),\\\n",
+    "                                       ('ZTILEID', '>i4')\n",
+    "                                       ])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8076255f-7ae2-445b-afd6-b6e2c3d925f1",
    "metadata": {},
    "outputs": [],
    "source": []
